--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,12 @@
 #V2
-ls
-history
-ls
-history
+   salam l ll 
+   l\n ll\n lll\n \n \n \n \n \n \n
+echo    l\n ll\n lll\n \n
+clear
+echo " " " l\n ll\n lll\n "\n
+clear
+echo    l\n ll\n lll\n \n
+clear
+echo    l\n ll\n lll\n \n
+clear
+echo    l\n ll\n lll\n \n
