0-shell  ===>  a lot of work is waiting with ls  //  just added the sorting && needs some improvements

--- a/history.txt
+++ b/history.txt
@@ -82,3 +82,11 @@ clear
 cle
 clear
 ls Cargo.lock Cargo.toml
+ls Cargo.toml Cargo.lock
+clear
+ls Cargo.toml cargo.tomlll
+clear
+ls cargo.tomlll Cargo.toml
+clear
+ls cargo.tomlll Cargo.toml
+clear
