--- a/history.txt
+++ b/history.txt
@@ -1,17 +1,4 @@
 #V2
-   salam l ll 
-   l\n ll\n lll\n \n \n \n \n \n \n
-echo    l\n ll\n lll\n \n
-clear
-echo " " " l\n ll\n lll\n "\n
-clear
-echo    l\n ll\n lll\n \n
-clear
-echo    l\n ll\n lll\n \n
-clear
-echo    l\n ll\n lll\n \n
-clear
-echo    l\n ll\n lll\n \n
 history
 clear
 echo " " " l\n ll\n lll\n "\n
@@ -90,3 +77,25 @@ ls cargo.tomlll Cargo.toml
 clear
 ls cargo.tomlll Cargo.toml
 clear
+ls Cargo.toml Cargo.lock src target
+clear
+ls Cargo.toml Cargo.lock src target
+clear
+ls Cargo.toml Cargo.lock src target
+clear
+ls Cargo.toml Cargo.lock src target
+clear
+ls target.txt src.txt
+ls src.txt target.txt
+clear
+ls src.txt target.txt
+cle
+clear
+ls src.txt target.txt
+ls target.txt src.txt 
+clear
+ls Cargo.toml Cargo.lock src target
+clear
+ls Cargo.toml Cargo.lock src target
+clear
+ls Cargo.toml Cargo.lock src target
